--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -8,6 +8,10 @@
     --text-color: #fff;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .navbar-brand {
     font-size: 1.8rem;
     color: #427D9D;
@@ -112,60 +116,135 @@
     width: 69.5%;
 }
 
+.latestjobs {
+    text-align: center;
+}
+
 .row {
     padding: 50px;
 }
 
 .jobs-list-container {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 20px auto;
 }
 
-.jobs-list-container .job {
-    box-shadow: 0 4px 24px -8px rgba(2, 48, 71, 0.2);
-    padding: 20px;
-    border-radius: 16px;
-    position: relative;
+.card {
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1),
+        inset 0px 0px 50px rgba(0, 0, 0, 0.2);
+    margin: 10px;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
+    background: #DDF2FD;
     transition: all 400ms ease;
-    height: 100%;
-    /* Tinggi 100% untuk menyamakan tinggi setiap elemen job */
+}
+
+.card-header {
+    background-color: rgba(255, 255, 255, 0.03);
+    border-bottom: none;
+}
+
+.card-body {
+    flex-grow: 1;
+}
+
+.card-body>div {
+    margin: 10px 0px;
+}
+
+.job-card {
+    min-width: 250px;
 
 }
 
-.jobs-list-container .job:hover {
+.card>div {
+    padding: 15px;
+}
+
+.job-type {
+    background: rgba(0, 0, 100, 1);
+    display: inline-block;
+    padding: 5px;
+    font-size: 10px;
+    color: rgba(255, 255, 255, 1);
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.job-title {
+    font-size: bold;
+    flex-basis: 100%;
+}
+
+.job-description {
+    font-size: 12px;
+    color: #999;
+}
+
+.job-posting-details {
+    display: flex;
+}
+
+.job-posted-time, .job-salary {
+    display: flex;
+    flex-basis: 50%;
+    font-size: 12px;
+}
+
+.job-posted-time img, .job-salary img {
+    max-width: 12px;
+    margin-right: 5px;
+}
+
+.card-footer {
+    margin-top: 10px;
+    margin: 0px;
+    padding: 10px 0px;
+    display: flex;
+    color: #999;
+    background: #fff;
+}
+
+.company-details {
+    font-size: 12px;
+    margin-top: 5px;
+    font-weight: bold;
+    flex-grow: 1;
+
+}
+
+.card .company-logo {
+    width: 25px;
+    margin-right: 5px;
+}
+
+.card .location {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.card .location img {
+    width: 20px;
+    margin-left: -5px;
+    opacity: 0.5;
+}
+
+
+.card:hover {
     transform: scale(1.03);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+
 }
 
-.jobs-list-container .open-positions {
-    position: absolute;
-    top: 15px;
-    right: 23px;
-    font-size: 13.5px;
-    color: #e63946;
-}
+.jobs-slider {
+    display: flex;
+    /*   flex-wrap:wrap; */
+    justify-content: center;
+    padding: 20px 40px;
 
-.jobs-list-container .job img {
-    margin-bottom: 15px;
-    width: 30px;
-    /* Ubah lebar ikon sesuai keinginan */
-    top: 10px;
-    left: 10px;
-}
-
-.jobs-list-container .jobtitle {
-    font-size: 18px;
-    padding: 10px 0;
-    margin: 0;
-    color: #023047;
-    margin-bottom: 10px;
-}
-
-.jobs-list-container .details {
-    font-size: 14px;
-    color: #333;
-    line-height: 1.6;
-    flex: 1;
-    margin-bottom: 10px;
+    margin: 0px auto;
+    overflow-x: hidden;
 }
