--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -105,6 +105,10 @@ html {
 .navbar-toggler:focus {
     background-color: var(--custom-hover-color);
     transition: background-color 0.3s ease;
+    -webkit-transition: background-color 0.3s ease;
+    -moz-transition: background-color 0.3s ease;
+    -ms-transition: background-color 0.3s ease;
+    -o-transition: background-color 0.3s ease;
 }
 
 .container.text-center {
