--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -131,6 +131,8 @@ html {
 }
 
 .card {
+    width: 300px;
+    height: 300px;
     border-radius: 10px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1),
         inset 0px 0px 50px rgba(0, 0, 0, 0.2);
@@ -140,6 +142,7 @@ html {
     flex-direction: column;
     background: #DDF2FD;
     transition: all 400ms ease;
+    cursor: pointer;
 }
 
 .card-header {
@@ -152,6 +155,8 @@ html {
 }
 
 .card-body>div {
+    width: 300px;
+    height: 20px;
     margin: 10px 0px;
 }
 
@@ -199,6 +204,7 @@ html {
 }
 
 .card-footer {
+    height: 70px;
     margin-top: 10px;
     margin: 0px;
     padding: 10px 0px;
